--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,12 +48,11 @@ android {
 
 dependencies {
 
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
+    implementation "androidx.navigation:navigation-compose:2.6.0-alpha04"
 
     implementation "androidx.compose.runtime:runtime:1.5.4"
     implementation "androidx.compose.runtime:runtime-livedata:1.5.4"
     implementation "androidx.compose.runtime:runtime-rxjava2:1.5.4"
-
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
@@ -64,6 +63,9 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+
+    implementation 'androidx.compose.material:material:1.2.0'
+    
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
